tdf#124521 sw btlr writing mode render: fix paint rectangle on scroll

By implementing btlr support in
SwTextFrame::SwitchVerticalToHorizontal(SwRect), so not only
invalidation but paint rectangle is also correct, which means actual
text painting happens.

Change-Id: I4215799ff63c93b300e4e8f97c6824f75d7c5401